css/style.css
/* ... */
/* lato-900 - latin */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 900;
  src: local(''),
    url('../fonts/lato-v23-latin-900.woff2') format('woff2'),
    /* Chrome 26+, Opera 23+, Firefox 39+ */
    url('../fonts/lato-v23-latin-900.woff') format('woff');
  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

html {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

*,
*::before,
*::after {
  -webkit-box-sizing: inherit;
  box-sizing: inherit;
}

.item {
  width: 200px;
  height: 100px;
  background-color: green;
  padding: 20px;
}

body {
  font-family: 'Lato';
  font-style: normal;
  font-size: 16px;
  line-height: 1.2;
  font-weight: normal;
  color: #102746;
}

img {
  max-width: 100%;
  height: auto;
}

.wrapper {
  max-width: 1060px;
  margin: 0 auto;
  padding: 0 15px;
}

.wrapper-full {
  max-width: 1262px;
  margin: 0 auto;
  padding: 0 15px;
}

.section__title {
  font-weight: 500;
  font-size: 35px;
  line-height: 42px;
  position: relative;
  padding-bottom: 10px;
}

.section__title::after {
  display: block;
  content: '';
  width: 253px;
  height: 3px;
  background-color: #006DFE;
  position: absolute;
  bottom: 0;
  left: 0;

}

/* Header styles start */

.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: 0.2s linear;
  -o-transition: 0.2s linear;
  transition: 0.2s linear;
  padding-bottom: 20px;
  z-index: 10;
}

.header_active {
  background: #0E1D28;
}

.header__wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 56px;
}

.header__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.header__item {
  margin-right: 82px;
}

.header__item:last-child {
  margin-right: 0;
}

.header__link {
  font-size: 18px;
  line-height: 24px;
  color: #FFFFFF;
  text-decoration: none;
}

.header__link:hover,
.header__link:focus,
.header__link:active {
  opacity: 75%;
}

.header__burger {
  display: none;
  width: 40px;
  height: 28px;
  position: relative;
}

.burger__line {
  display: block;
  width: 100%;
  height: 2px;
  background-color: #ffffff;
  position: absolute;
  left: 0;
}

.burger__line_first {
  top: 0;
}

.burger__line_second {
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.burger__line_third {
  bottom: 0;
}

/* Header styles end */



/* Intro styles start */

.intro {
  min-height: 100vh;
  background: url(../img/into-bg-min.jpg) no-repeat center;
  background-size: cover;
  padding-top: 263px;
  padding-bottom: 223px;
}

.intro__title {
  font-weight: 500;
  font-size: 50px;
  line-height: 60px;
  color: #FFFFFF;
  max-width: 619px;
  margin-bottom: 22px;
}

.intro__subtitle {
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #FFFFFF;
  max-width: 546px;
  margin-bottom: 59px;
}

.search-form__info {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.search-form__field {
  width: 297px;
  background: transparent url(../img/svg/circle-icon.svg) no-repeat left top 6px;
  background-size: 20px;
  border: 0;
  border-bottom: 3px solid #BFC0C5;
  margin-right: 60px;
  padding-left: 43px;
  padding-bottom: 22px;
  font-weight: 500;
  font-size: 18px;
  color: #FFFFFF;
}

.search-form__field::-webkit-input-placeholder {
  font-weight: 500;
  font-size: 18px;
  color: #FFFFFF;
}

.search-form__field::-moz-placeholder {
  font-weight: 500;
  font-size: 18px;
  color: #FFFFFF;
}

.search-form__field:-ms-input-placeholder {
  font-weight: 500;
  font-size: 18px;
  color: #FFFFFF;
}

.search-form__field::-ms-input-placeholder {
  font-weight: 500;
  font-size: 18px;
  color: #FFFFFF;
}

.search-form__field::placeholder {
  font-weight: 500;
  font-size: 18px;
  color: #FFFFFF;
}

.search-form__submit {
  padding: 15px 39px;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 24px;
  color: #FFFFFF;
  background: #1B7DFF;
  border: 0;
}

.search-form__submit:hover,
.search-form__submit:focus,
.search-form__submit:active {
  background: #0e66da;
}

/* Intro styles end */



/* Benefits styles start */

.benefits {
  margin-bottom: 131px;
}

.benefits__wrap {
  max-width: 1262px;
  background-color: #FFFFFF;
  margin: 0 auto;
  -webkit-box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
  box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
  position: relative;
}

.benefits__title {
  width: 100%;
  font-weight: 500;
  font-size: 35px;
  line-height: 42px;
  padding: 93px 100px 88px 100px;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
  background-color: #FFFFFF;
}


.benefits__cards {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 55px 1fr 55px 1fr;
  grid-template-columns: repeat(3, 1fr);
  grid-column-gap: 55px;
  padding: 0 100px;
}

.benefits__card {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -ms-grid-column-span: 1;
  grid-column: span 1;
  margin-bottom: 112px;
}

.benefits__card-pic {
  margin-bottom: 37px;
  max-width: 66px;
}

.benefits__cars-thumb {
  display: block;
  width: 66px;
  height: 66px;
}

.benefits__card-title {
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
  margin-bottom: 26px;
}

.benefits__cars-desc {
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 39px;
}
/* ... */

